# SDM-RDFizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish-rel.yml
src/rdfizer/: __main__.py
