[tool.poetry]
name = "rdfizer"
version = "4.7.5.3"
description = "An interpreter of RML mapping rules that allows the transformation of (un)structured data into RDF knowledge graphs"
authors = ["Enrique Iglesias <iglesias@l3s.de>"]
license = "Apache License 2.0"
readme = "README.md"
homepage = "https://github.com/sdm-tib/sdm-rdfizer"
repository = "https://github.com/sdm-tib/sdm-rdfizer"
keywords = ["rdf", "mapping", "kg", "rml"]

[tool.poetry.dependencies]
python = "^3.9"
isodate="^0.7.2"
pyparsing="^2.2.0"
rdflib="^7.1.4"
six = "^1.11.0"
mysql-connector-python= "^9.2.0"
psycopg2-binary = "^2.9.10"
pandas = "^2.0.0"
requests = "^2.32.3"
sparqlwrapper = "^2.0.0"
pyodbc ="^5.2.0"
jsonpath_ng = "^1.7.0"
#Flask

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
